--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a class="active" href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,18 +82,22 @@
                 <li><a href="./faky.html">FAKY</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>FAKY</span>
               </div>
             </div>
+            <!-- FAKY INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist1-avatar.jpg"
                   alt="Icono FAKY"
                 />
               </div>
+              <!-- TEXT -->
               <article>
                 <p>
                   FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina,
@@ -103,6 +110,7 @@
                   hit de FAKY consiguiendo la tercera posición en iTunes junto a
                   Ariana Grande y Radiohead.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist1-banner.jpg"
@@ -110,6 +118,7 @@
                     alt="Imagen grupo FAKY"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Además, ese mismo año la canción ganó el premio “Mejor vídeo
                   de nuevos artistas japoneses” en los MTV Video Music Awards de
@@ -118,7 +127,7 @@
                   canciones four, el cuarto ending del anime Black Clover y
                   Chase Me, de Gundam Build Fighters.
                 </p>
-
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/Um0Yk3ahDCA"
@@ -126,6 +135,7 @@
                     allowfullscreen
                   ></iframe>
                 </div>
+                <!-- TEXT -->
                 <p>
                   ¡No os perdáis a Shirogane-sama por primera vez en la capital
                   en la próxima edición de Manguca! Será jurado de los
@@ -133,6 +143,7 @@
                   donde podréis conocerla y comprar su merchandising. ¡Os
                   esperamos!
                 </p>
+                <!-- TABLE -->
                 <table>
                   <tbody>
                     <tr>
@@ -174,8 +185,10 @@
                 </table>
               </article>
             </div>
+            <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -202,6 +215,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETOWRK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -235,8 +249,6 @@
         </div>
       </div>
     </main>
-    <!-- FOOTER -->
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
