--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,18 +82,22 @@
                 <li><a href="./ginny.html">Ginny Di</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Ginny Di</span>
               </div>
             </div>
+            <!-- GINNY INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist7-avatar.jpg"
                   alt="Icono Ginny Di"
                 />
               </div>
+              <!-- TEXT -->
               <article>
                 <p>
                   Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
@@ -101,6 +108,7 @@
                   crear parodias musicales de pop muy pegadizas sobre Harry
                   Potter, Juego de Tronos, Doctor Who…
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist7-banner.jpg"
@@ -108,6 +116,7 @@
                     alt="Cosplay Ginny Di"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   En 2014 decidió triunfar en solitario, y se empezó a hacer muy
                   popular debido a sus cosplays de Arya de Juego de Tronos y de
@@ -119,6 +128,7 @@
                   protagonizando videos musicales y sketches sobre fandoms y
                   juegos de mesa.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/QOawH-IZI0U"
@@ -131,6 +141,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -157,6 +168,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -190,7 +202,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
