--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,6 +54,8 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
           <div class="sidebar">
@@ -72,6 +73,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,18 +81,22 @@
                 <li><a href="./halex.html">H. Alexander</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>H Alexander</span>
               </div>
             </div>
+            <!-- HALEX INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist8-avatar.jpg"
                   alt="Icono H Alexander"
                 />
               </div>
+              <!-- TEXT -->
               <article>
                 <p>
                   Hannah Alexander trabaja como artista a tiempo completo en
@@ -101,6 +107,7 @@
                   cultura pop, además sacó un libro con todo tipo de detalles
                   para que fuese más fácil hacer cosplay de éstos.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist8-banner.jpg"
@@ -108,12 +115,14 @@
                     alt="Dibujo H Alexander"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   No solo se dedica a la ilustración y al diseño, Hannah
                   Alexander es cosplayer ocasional. Ha estudiado confección y
                   diseño por lo que su nivel de costura es muy alto, fijándose
                   sobretodo en los detalles de los trajes.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist8-banner2.jpg"
@@ -126,6 +135,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -152,6 +162,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
