--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a class="active" href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./ladybeard.html">LadyBeard</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>LadyBeard</span>
               </div>
             </div>
+            <!-- LADYBEARD INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist10-avatar.jpg"
@@ -92,6 +98,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Este artista australiano demostró desde pequeño su particular
                   extravagancia y sus dotes como actor. Fue en la lucha libre
@@ -101,6 +108,7 @@
                   gran popularidad y renombre tras sus primeras peleas, en las
                   que vestía un llamativo atuendo de lolita.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist10-banner.jpeg"
@@ -108,6 +116,7 @@
                     alt="Cosplay LadyBeard"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Con una gran cantidad de admiradores y bajo el nombre de “Wu
                   Su Lui” (LadyBeard en cantonés), siguió su sueño de iniciar
@@ -117,6 +126,7 @@
                   todo el mundo. Actualmente, forma parte del grupo Deadlift
                   Lolita junto a Reika Saiki.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/M8-vje-bq9c"
@@ -124,6 +134,7 @@
                     allowfullscreen
                   ></iframe>
                 </div>
+                <!-- TABLE -->
                 <table>
                   <tbody>
                     <tr>
@@ -174,6 +185,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -200,6 +212,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -233,7 +246,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
