--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./laia.html">Laia López</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Laia López</span>
               </div>
             </div>
+            <!-- LAIA INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist6-avatar.jpg"
@@ -92,6 +98,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Laia López, graduada en Bellas Artes en la Universidad de
                   Barcelona, es una autodidacta en el campo de la ilustración
@@ -103,6 +110,7 @@
                   ilustrada. Comparte la mayoría de sus ilustraciones por redes
                   sociales, donde alcanza más de un millón de seguidores.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist6-banner.jpg"
@@ -110,6 +118,7 @@
                     alt="Dibujo Laia Lopez"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Hace unos pocos meses, publicó su último trabajo: “Strawberry
                   Moon” su primera obra en solitario, una novela gráfica juvenil
@@ -128,6 +137,7 @@
                   un stand donde podréis conocerla y comprar su merchandising y
                   además dará una charla. ¡Os esperamos!
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/0zPVvGoMKdI"
@@ -140,6 +150,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -166,6 +177,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -199,7 +211,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
