--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <header>
       <div class="container">
         <div class="logo">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./shirogane.html">Shirogane</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Shirogane</span>
               </div>
             </div>
+            <!-- SHIROGANE INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist4-avatar.jpg"
@@ -93,6 +99,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Shirogane-sama es una cosplayer, estilista de pelucas y MUA de
                   Moscú que lleva haciendo cosplay poco más de 7 años. En 2017
@@ -102,6 +109,7 @@
                   Ovsyan, aunque en la actualidad dispone de un equipo más
                   grande de creadores del cual está muy orgullosa.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist4-banner.jpg"
@@ -109,6 +117,7 @@
                     alt="Imagen cosplay Shirogane"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   La mayor parte de su creatividad se refleja en sus sesiones de
                   fotos y en sus videos de cosplay, solo en 2019 ha tenido más
@@ -119,12 +128,15 @@
                   últimamente de todo el mundo, ya que su popularidad la ha
                   llevado a ser invitada de diversos eventos internacionales.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/bk98SfjtAA4"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
                   ></iframe>
                 </div>
+                <!-- TEXT -->
                 <p>
                   ¡No os perdáis a Shirogane-sama por primera vez en la capital
                   en la próxima edición de Manguca! Será jurado de los
@@ -137,6 +149,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -163,6 +176,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -196,7 +210,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
