--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./sukisha.html">Sukisha</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Sukisha</span>
               </div>
             </div>
+            <!-- SUKISHA INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist5-avatar.png"
@@ -92,6 +98,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Se trata del productor y cantante japonés SUKISHA, siendo la
                   primera estrella invitada de Manguca. Por primera vez fuera de
@@ -99,6 +106,7 @@
                   maestro del lo-fi hip hop, el género musical que más de moda
                   está en internet.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist5-banner.jpg"
@@ -106,6 +114,7 @@
                     alt="Imagen Sukisha"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   La obra de este artista japonés destaca por sus composiciones
                   de estilo lo-fi hip hop, un enfoque estético de la música en
@@ -116,6 +125,7 @@
                   como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and
                   half minutes magic.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/KvmmnAmHKVA"
@@ -123,6 +133,7 @@
                     allowfullscreen
                   ></iframe>
                 </div>
+                <!-- TABLE -->
                 <table>
                   <tbody>
                     <tr>
@@ -178,6 +189,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -204,6 +216,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -237,7 +250,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
