--- a/informacion/invitados/kiki.html
+++ b/informacion/invitados/kiki.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a class="active" href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!--BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,18 +82,22 @@
                 <li><a href="./kiki.html">Kiki vivi lily</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Kiki vivi lily</span>
               </div>
             </div>
+            <!-- KIKI INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist2-avatar.jpg"
                   alt="Icono Kiki vivi lily"
                 />
               </div>
+              <!-- TEXT -->
               <article>
                 <p>
                   María Dolores Flores Ruiz, conocida artísticamente como Kiki
@@ -101,6 +108,7 @@
                   popular y polifacética; pues era cantante, bailaora de k-pop y
                   actriz, dotada de una personalidad arrolladora.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist2-banner.jpg"
@@ -108,6 +116,7 @@
                     alt="Imagen Kiki vivi lily"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Cuenta con cientos de grabaciones y canciones que quedarán en
                   el recuerdo popular como himnos. Como bailaora enardeció a las
@@ -117,6 +126,7 @@
                   rancheras. Ahora, podemos verla en directo junto a Sukisha,
                   celebrando el lanzamiento de su nuevo disco.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/nvwx4FSI2wo"
@@ -124,6 +134,7 @@
                     allowfullscreen
                   ></iframe>
                 </div>
+                <!-- TABLE -->
                 <table>
                   <tbody>
                     <tr>
@@ -159,6 +170,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -185,6 +197,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
