--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./meowri.html">Jenna Lynn</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Jenna Lynn</span>
               </div>
             </div>
+            <!-- MEOWRI INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist9-avatar.jpg"
@@ -92,12 +98,14 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Cosplayer y estrella de Instagram que es conocida por publicar
                   una variedad de retratos y fotos de modelaje en diferentes
                   atuendos para sus más de 1.3 millones de seguidores. Sus
                   destacados son Spiderman y Kusanagi de Ghost in the Shell.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist9-banner.jpg"
@@ -105,12 +113,14 @@
                     alt="Cosplay Jenna Lynn"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Además de dedicarse a ser creadora de contenido, lleva una
                   tienda online de su propia marca de ropa y es partner de la
                   famosa web de streaming Twitch, donde conversa con sus fans y
                   juega a videojuegos en directo.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/U8rwdCg8aIc"
@@ -123,6 +133,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -149,6 +160,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -182,7 +194,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
