--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -72,6 +74,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -79,12 +82,15 @@
                 <li><a href="./odashima.html">Odashima</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Odashima</span>
               </div>
             </div>
+            <!-- ODASHIMA INFO -->
             <div class="information">
+              <!-- ICON -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist3-avatar.jpg"
@@ -92,6 +98,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Hitomi Odashima es la directora de animación y asistente de
                   diseño de personajes de My Hero Academia, una de las series de
@@ -99,6 +106,7 @@
                   todo el mundo por millones de personas, podremos conocerla en
                   persona durante la próxima edición Manguca.
                 </p>
+                <!-- PICTURE -->
                 <div class="iframe">
                   <img
                     src="../../images/artistas/artist3-banner.jpg"
@@ -106,6 +114,7 @@
                     alt="Imagen Izuku Midoriya"
                   />
                 </div>
+                <!-- TEXT -->
                 <p>
                   Odashima también es conocida por su trabajo en el anime de
                   Blue Exorcist, donde dirigió uno de los capítulos. Además, ha
@@ -114,6 +123,7 @@
                   destacados es Digimon Adventure tri, en la que trabajó en el
                   diseño de vestuario.
                 </p>
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/P2DEipI1obI"
@@ -126,6 +136,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -152,6 +163,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -185,7 +197,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
