--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR-->
     <header>
       <div class="container">
@@ -55,8 +54,11 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
         <div class="content">
+          <!-- SIDEBAR -->
           <div class="sidebar">
             <a href="./faky.html">Faky</a>
             <a href="./kiki.html">Kiki vivi lily</a>
@@ -74,6 +76,7 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div class="information-box">
+            <!-- BREADCRUMB -->
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
@@ -81,12 +84,15 @@
                 <li><a href="./overwatchvoices.html">Voces Overwatch</a></li>
               </ul>
             </div>
+            <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
                 <span>Voces de Overwatch</span>
               </div>
             </div>
+            <!-- OVERWATCH INFO -->
             <div class="information">
+              <!-- INFO -->
               <div class="picture">
                 <img
                   src="../../images/artistas/artist11-avatar.jpg"
@@ -94,6 +100,7 @@
                 />
               </div>
               <article>
+                <!-- TEXT -->
                 <p>
                   Chloé Hollings es una actriz, artista de voz, escritora y
                   cantante francesa, británica y australiana. Nació en París,
@@ -108,6 +115,7 @@
                   Widowmaker. También es autora de una memoria publicada en
                   Francia en 2016.
                 </p>
+                <!-- TEXT -->
                 <p>
                   Anjali Bhimani proporciona la voz del héroe Symmetra en
                   Overwatch. Nació y creció en California y se graduó de la
@@ -117,7 +125,7 @@
                   Patel en el popular programa de televisión estadounidense
                   Modern Family.
                 </p>
-
+                <!-- VIDEO -->
                 <div class="iframe">
                   <iframe
                     src="https://www.youtube.com/embed/UrfvQHbEocs"
@@ -130,6 +138,7 @@
             <!-- FOOTER -->
             <footer>
               <div class="footer">
+                <!-- FOOTER INFO -->
                 <div class="about">
                   <div class="colabout">
                     <div>
@@ -156,6 +165,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- SOCIAL NETWORK -->
                 <div class="contacto">
                   <div class="contactos">
                     <img
@@ -189,7 +199,6 @@
         </div>
       </div>
     </main>
-
     <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
