--- a/informacion/noticias/noticia2.html
+++ b/informacion/noticias/noticia2.html
@@ -55,20 +55,23 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="./noticia2.html">BTS aplaza su gira por España</a></li>
           </ul>
         </div>
-
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Noticias</span>
           </div>
         </div>
-
+        <!-- BANNER -->
         <div class="content style">
           <article>
             <h1>BTS aplaza su gira por España</h1>
@@ -114,6 +117,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -138,6 +142,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
