--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -15,7 +15,7 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
@@ -54,18 +54,23 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./actividades.html">Actividades</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Actividades</span>
           </div>
         </div>
+        <!-- ACTIVITIES-->
         <div class="activity actLeft">
           <img
             class="miniature miniature1"
@@ -89,7 +94,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actRight">
           <img
             class="miniature"
@@ -138,7 +142,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actRight">
           <img
             class="miniature"
@@ -162,7 +165,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actLeft">
           <img
             class="miniature miniature3"
@@ -186,7 +188,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actRight">
           <img
             class="miniature"
@@ -210,7 +211,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actLeft">
           <img
             class="miniature miniature3"
@@ -237,6 +237,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -261,6 +262,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
