--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,18 +54,23 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./concursos.html">Concursos</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Concursos</span>
           </div>
         </div>
+        <!-- COMPTETITIONS -->
         <div class="activity actLeft">
           <img
             class="miniature"
@@ -88,7 +92,6 @@
             </div>
           </div>
         </div>
-
         <div class="activity actRight">
           <img
             class="miniature"
@@ -162,6 +165,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -186,6 +190,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
