--- a/informacion/noticias/noticia1.html
+++ b/informacion/noticias/noticia1.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,20 +54,23 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="./noticia1.html">Fallece Hiroshi Masuoka</a></li>
           </ul>
         </div>
-
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Noticias</span>
           </div>
         </div>
-
+        <!-- NEW -->
         <div class="content style">
           <article>
             <h1>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</h1>
@@ -120,6 +122,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -144,6 +147,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
