--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -87,7 +87,7 @@
             <!-- BANNER -->
             <div class="titleBox">
               <div id="title">
-                <span>Voces de Overwatch</span>
+                <span>Voces Overwatch</span>
               </div>
             </div>
             <!-- OVERWATCH INFO -->
