--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -66,7 +66,7 @@
             <a href="./shirogane.html">Shirogane</a>
             <a href="./sukisha.html">Sukisha</a>
             <a href="./laia.html">Laia López</a>
-            <a href="./ginny.html">Ginni Di</a>
+            <a href="./ginny.html">Ginny Di</a>
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
             <a href="./ladybeard.html">LadyBeard</a>
