--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <!-- ACTIVITIES-->
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature miniature1"
             src="../images/actividades/activity1.png"
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actRight">
+        <div class="fade activity actRight">
           <img
             class="miniature"
             id="miniature2"
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature miniature1"
             src="../images/actividades/activity3.png"
@@ -142,7 +142,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actRight">
+        <div class="fade activity actRight">
           <img
             class="miniature"
             src="../images/actividades/activity6.jpg"
@@ -165,7 +165,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature miniature3"
             src="../images/actividades/activity7.jpg"
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actRight">
+        <div class="fade activity actRight">
           <img
             class="miniature"
             id="miniature4"
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature miniature3"
             src="../images/actividades/activity9.jpg"
@@ -293,5 +293,7 @@
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/fade.js"></script>
   </body>
 </html>
