--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <!-- COMPTETITIONS -->
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso1.jpg"
@@ -89,11 +89,10 @@
                 Talent show cuyo objetivo es encontrar la mejor performance e
                 imitación nacional de un grupo de KPOP, JPOP o MPOP.
               </p>
-              <a href="../informacion/footer/concursos.html#accordion1">Click</a>
             </div>
           </div>
         </div>
-        <div class="activity actRight">
+        <div class="fade activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso2.jpg"
@@ -117,7 +116,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actLeft">
+        <div class="fade activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso3.jpg"
@@ -138,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="activity actRight">
+        <div class="fade activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso4.jpg"
@@ -222,5 +221,7 @@
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/fade.js"></script>
   </body>
 </html>
