--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/layout.css" />
     <!-- CSS Invitados -->
     <link rel="stylesheet" href="../css/invitados.css" />
+
     <title>MANGUCA</title>
   </head>
   <body>
@@ -73,7 +74,7 @@
         <!-- ARTIST -->
         <div class="artists">
           <div class="row">
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/faky.html">
                 <img
                   class="miniature"
@@ -95,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/kiki.html"
                 ><img
                   class="miniature"
@@ -117,7 +118,7 @@
                 </div>
               </div>
             </div>
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/odashima.html">
                 <img
                   class="miniature"
@@ -142,7 +143,7 @@
             </div>
 
             <div class="row">
-              <div class="artist">
+              <div class="fade artist">
                 <a href="./invitados/shirogane.html">
                   <img
                     class="miniature"
@@ -166,7 +167,7 @@
               </div>
             </div>
 
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/sukisha.html"
                 ><img
                   class="miniature"
@@ -189,7 +190,7 @@
               </div>
             </div>
 
-            <div class="artist">
+            <div class="fade artist">
               <a href=" ./invitados/laia.html">
                 <img
                   class="miniature"
@@ -215,7 +216,7 @@
           </div>
 
           <div class="row">
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/ginny.html">
                 <img
                   class="miniature"
@@ -239,7 +240,7 @@
               </div>
             </div>
 
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/meowri.html">
                 <img
                   class="miniature"
@@ -263,7 +264,7 @@
               </div>
             </div>
 
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/halex.html">
                 <img
                   class="miniature"
@@ -289,7 +290,7 @@
           </div>
 
           <div class="row" id="last">
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/ladybeard.html">
                 <img
                   class="miniature"
@@ -311,7 +312,7 @@
                 </div>
               </div>
             </div>
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/overwatchvoices.html"
                 ><img
                   class="miniature"
@@ -334,7 +335,7 @@
               </div>
             </div>
 
-            <div class="artist">
+            <div class="fade artist">
               <a href="./invitados/poltattoo.html">
                 <img
                   class="miniature"
@@ -420,5 +421,7 @@
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/fade.js"></script>
   </body>
 </html>
