--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -89,6 +89,7 @@
                 Talent show cuyo objetivo es encontrar la mejor performance e
                 imitación nacional de un grupo de KPOP, JPOP o MPOP.
               </p>
+              <a href="../informacion/footer/concursos.html#accordion1">Click</a>
             </div>
           </div>
         </div>
