--- a/informacion/footer/concursos.html
+++ b/informacion/footer/concursos.html
@@ -72,7 +72,7 @@
         </div>
         <div class="content">
           <!-- ACCORDION 1 -->
-          <button class="accordion">
+          <button id="accordion1" class="accordion" data-toggle="collapse">
             Asian Cover Dance
           </button>
           <div class="panel">
@@ -685,5 +685,6 @@
     <script src="../../js/acordeon.js"></script>
     <script src="../../js/scroll.js"></script>
     <script src="../../js/sidebar.js"></script>
+    <script src="../../js/jquery-3.4.1.min.js"></script>
   </body>
 </html>
