--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <!-- COMPTETITIONS -->
-        <div class="fade activity actLeft">
+        <div class="activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso1.jpg"
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="fade activity actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso2.jpg"
@@ -116,7 +116,7 @@
             </div>
           </div>
         </div>
-        <div class="fade activity actLeft">
+        <div class="activity actLeft">
           <img
             class="miniature"
             src="../images/concursos/concurso3.jpg"
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="fade activity actRight">
+        <div class="activity actRight">
           <img
             class="miniature"
             src="../images/concursos/concurso4.jpg"
@@ -221,7 +221,5 @@
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/fade.js"></script>
   </body>
 </html>
