--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -74,7 +74,7 @@
         <!-- ARTIST -->
         <div class="artists">
           <div class="row">
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/faky.html">
                 <img
                   class="miniature"
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/kiki.html"
                 ><img
                   class="miniature"
@@ -118,7 +118,7 @@
                 </div>
               </div>
             </div>
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/odashima.html">
                 <img
                   class="miniature"
@@ -143,7 +143,7 @@
             </div>
 
             <div class="row">
-              <div class="fade artist">
+              <div class="artist">
                 <a href="./invitados/shirogane.html">
                   <img
                     class="miniature"
@@ -167,7 +167,7 @@
               </div>
             </div>
 
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/sukisha.html"
                 ><img
                   class="miniature"
@@ -190,7 +190,7 @@
               </div>
             </div>
 
-            <div class="fade artist">
+            <div class="artist">
               <a href=" ./invitados/laia.html">
                 <img
                   class="miniature"
@@ -216,7 +216,7 @@
           </div>
 
           <div class="row">
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/ginny.html">
                 <img
                   class="miniature"
@@ -240,7 +240,7 @@
               </div>
             </div>
 
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/meowri.html">
                 <img
                   class="miniature"
@@ -264,7 +264,7 @@
               </div>
             </div>
 
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/halex.html">
                 <img
                   class="miniature"
@@ -290,7 +290,7 @@
           </div>
 
           <div class="row" id="last">
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/ladybeard.html">
                 <img
                   class="miniature"
@@ -312,7 +312,7 @@
                 </div>
               </div>
             </div>
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/overwatchvoices.html"
                 ><img
                   class="miniature"
@@ -335,7 +335,7 @@
               </div>
             </div>
 
-            <div class="fade artist">
+            <div class="artist">
               <a href="./invitados/poltattoo.html">
                 <img
                   class="miniature"
@@ -421,7 +421,5 @@
     <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/fade.js"></script>
   </body>
 </html>
